Styless.css
/* ... */
.tabs .tab-nav {
    margin-bottom: -1px;
    z-index: 99;
}

.tabs-container {
    padding: 34px;
}

.tab-content {
    display: none;
}

.tab-content p {
    margin-bottom: 0;
    font-size: 14px;
    line-height: 2;
    color: #929191;
}
.primary-button {
    position: relative;
    display: inline-block;
    padding: 0px 30px;
    background: #14744F;
    color: #fff;
    font-weight: 400;
    height: 45px;
    line-height: 45px;
    border: none;
    border-radius: 25px;
    overflow: hidden;
    opacity: 0.9;
    -webkit-transition: 0.6s all;
    transition: 0.6s all;
    margin-right: 10px;
    cursor: pointer;
    
  }
  
  .primary-button:after {
    content: "";
    position: absolute;
    top: 0;
    left: -50%;
    width: 120%;
    height: 100%;
    background: rgba(255, 255, 255, 0.5);
    -webkit-transform: scale3d(6, 2, 1) rotate(135deg) translate(0, -150%);
    transform: scale3d(6, 2, 1) rotate(135deg) translate(0, -150%);
    -webkit-transition: 0.6s all;
    transition: 0.6s all;
  }
  
  .primary-button:hover:after, .primary-button:focus:after {
    -webkit-transform: scale3d(6, 2, 1) rotate(135deg) translate(0, 100%);
    transform: scale3d(6, 2, 1) rotate(135deg) translate(0, 100%);
  }
  
  .primary-button:hover, .primary-button:focus {
    color: #FFF;
    opacity: 1;
  }

.btn {
    padding: 18px 40px;
    border: 2px solid #262626;
    border-radius: 24px;
    font-size: 14px;
    font-weight: 600;
    line-height: 1;
    color: #262626;
    outline: none;
}

.btn:focus {
    outline: none;
}

.btn.orange-border {
    color: #fff;
    border: 2px solid #ff5a00;
    border-radius: 24px;
}

.btn.orange-border:hover,
.btn.gradient-bg {
    border-color: transparent;
    background: -moz-linear-gradient(180deg, rgba(255,90,0,1) 0%, rgba(255,54,0,1) 100%); /* ff3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255,90,0,1)), color-stop(100%, rgba(1255,54,0,1))); /* safari4+,chrome */
    background: -webkit-linear-gradient(180deg, rgba(255,90,0,1) 0%, rgba(255,54,0,1) 100%); /* safari5.1+,chrome10+ */
    background: -o-linear-gradient(180deg, rgba(255,90,0,1) 0%, rgba(255,54,0,1) 100%); /* opera 11.10+ */
    background: -ms-linear-gradient(180deg, rgba(255,90,0,1) 0%, rgba(255,54,0,1) 100%); /* ie10+ */
    background: linear-gradient(270deg, rgba(255,90,0,1) 0%, rgba(255,54,0,1) 100%); /* w3c */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5a00', endColorstr='#ff3600',GradientType=1 ); /* ie6-9 */
    color: #fff;
    border-radius: 20px;
}



/*----------------------------*\
	Counter Box
\*----------------------------*/

/*
# Counter Box
----------------------------------*/
.counter-box {
    margin: 30px 0;
    text-align: center;
    
   
}

.counter-box img {
    justify-content: center; /* Centers horizontally */
    align-items: center;
}

.counter-box .start-counter {
    margin-top: 10px;
    font-size: 48px;
    font-weight: 500;
    color: #000;
}

.counter-box .counter-k {
    font-size: 24px;
    font-weight: 500;
}

.counter-box .entry-title {
    margin-top: 10px;
    font-size: 16px;
    color: #000;
}

/*
# Icon Box
----------------------------------*/

 .home-page-icon-boxes {
    padding: 30px;
    
}


.icon-box {
    padding: 15px;
    border-radius: 24px;
    background: #ecf2f5;
    text-align: center;
    transition: all .35s;
    
}

.icon-box:hover,
.icon-box.active {
    border: 0;
/* For Firefox */
background: -moz-linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);

/* For Safari 4+ and Chrome */
background: -webkit-gradient(linear, left top, right top, color-stop(0%, #14744F), color-stop(100%, #3a9e8b));

/* For Safari 5.1+ and Chrome 10+ */
background: -webkit-linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);

/* For Opera 11.10+ */
background: -o-linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);

/* For Internet Explorer 10+ */
background: -ms-linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);

/* For W3C compliant browsers */
background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);

    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5a00', endColorstr='#ff3600',GradientType=1 ); /* ie6-9 */
    color: #fff;
}

.icon-box figure img:nth-of-type(1) {
    display: block;
}

.icon-box figure img:nth-of-type(2) {
    display: none;
}

.icon-box:hover figure img:nth-of-type(1),
.icon-box.active figure img:nth-of-type(1) {
    display: none;
}

.icon-box:hover figure img:nth-of-type(2),
.icon-box.active figure img:nth-of-type(2) {
    display: block;
}

.icon-box .entry-title {
    
    font-size: 25px;
    font-weight: 600;
    color: #262626;
    
}

.icon-box:hover .entry-title,
.icon-box.active .entry-title {
    color: #FFF; 
}

.icon-box .entry-content {
    margin-top: 5px;
}

.icon-box .entry-content p {
    
    font-size: 16px;
    color: #595858;
}

.icon-box .entry-content h4 {
    
    font-size: 18px;

}

.icon-box:hover .entry-content p,
.icon-box.active .entry-content p {
    color: #fff;
}

  .home-page-milestone {
    padding: 10px 0;
  }
  
  .home-page-milestone .section-heading .entry-title {
    padding-bottom: 10px;
    line-height: 1.6;
  }
  
  .home-page-milestone .section-heading p {
    font-size: 14px;
    color: #b91212;
  }
  

  
/*
# Welcome
--------------------------------*/
.home-page-welcome {
    position: relative;
    padding: 48px 0; 
    background-color: rgba(0, 0, 0, 0.385); /* Black background with 50% opacity */
    background: url("images/2023_09_29_10_36_IMG_6367.JPG") no-repeat center center;
    background-size: cover; 
    z-index: 0;
    display: flex; 
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.home-page-welcome::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    background: rgba(21, 21, 21, 0.8);
}
/* ... */

